--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^18.7.3",
     "nodemon": "^2.0.19",
     "rimraf": "^3.0.2",
@@ -18,5 +19,9 @@
   "keywords": [],
   "author": "Almirante Fuchs",
   "license": "ISC",
-  "description": "Neco Arcc or Never Ending Conversation Output Assigned to Report Code Corruption is a project that aims to control diferent conversation API's"
+  "description": "Neco Arcc or Never Ending Conversation Output Assigned to Report Code Corruption is a project that aims to control diferent conversation API's",
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
+  }
 }
