--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "keywords": [],
   "author": "Almirante Fuchs",
   "license": "ISC",
-  "description": "Neco Arcc or Never Ending Conversation Output Assigned to Report Code Corruption is a project that aims to control diferent conversation API's",
+  "description": "Neco Arc or Never Ending Conversation Output Application by Received Commmand is a project that aims to control diferent conversation API's",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "whatsapp-web.js": "^1.17.1"
   }
 }
