--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
     "build": "rimraf ./build && tsc",
-    "start": "npm run build && node build/index.js"
+    "start": "npm update && npm run build && node build/index.js"
   },
   "keywords": [],
   "author": "Almirante Fuchs",
@@ -23,6 +23,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.17.1"
   }
 }
