--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "keywords": [],
   "author": "Almirante Fuchs",
   "license": "ISC",
-  "description": "Neco Arc or Never Ending Conversation Output Application by Received Commmand is a project that aims to control diferent conversation API's",
+  "description": "Neco Arc or Never Ending Conversation Output Application by Received Commmand is a project that aims to control different conversation API's",
   "dependencies": {
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express.js": "^1.0.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.17.1"
   }
