--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.3",
+    "@types/qrcode": "^1.5.0",
     "nodemon": "^2.0.19",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
@@ -28,6 +29,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express.js": "^1.0.0",
+    "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.17.1"
   }
