--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.3",
     "@types/qrcode": "^1.5.0",
+    "@types/rimraf": "^3.0.2",
     "nodemon": "^2.0.19",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
