--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.7'
 
-service:
+services:
   api:
     build:
       context: .
@@ -8,4 +8,3 @@ service:
 
     ports:
       - 3000:3000
-      
