--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/node": "^18.7.3",
     "@types/qrcode": "^1.5.0",
     "@types/rimraf": "^3.0.2",
+    "@types/ws": "^8.5.3",
     "nodemon": "^2.0.19",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
@@ -24,6 +25,7 @@
   "description": "Neco Arc or Never Ending Conversation Output Application by Received Commmand is a project that aims to control different conversation API's",
   "dependencies": {
     "@adiwajshing/baileys": "^4.4.0",
+    "@adiwajshing/keyed-db": "^0.2.4",
     "@hapi/boom": "^10.0.0",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
