--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.3",
     "@types/qrcode": "^1.5.0",
+    "@types/qrcode-terminal": "^0.12.0",
     "@types/rimraf": "^3.0.2",
     "@types/ws": "^8.5.3",
     "nodemon": "^2.0.19",
@@ -32,6 +33,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express.js": "^1.0.0",
+    "puppeteer": "^19.0.0",
     "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.17.1"
