--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express.js": "^1.0.0",
-    "puppeteer": "^19.0.0",
     "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.17.1"
+    "whatsapp-web.js": "github:ReforwardDev/whatsapp-web.js#patch-1"
   }
 }
