--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.1",
     "express.js": "^1.0.0",
+    "leader-line": "^1.0.7",
     "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.23.0"
